--- a/pallets/ajuna-affiliates/Cargo.toml
+++ b/pallets/ajuna-affiliates/Cargo.toml
@@ -12,6 +12,8 @@ version.workspace    = true
 targets = [ "x86_64-unknown-linux-gnu" ]
 
 [dependencies]
+# Ajuna
+ajuna-primitives   = { workspace = true }
 # Substrate (wasm)
 frame-support      = { workspace = true }
 frame-system       = { workspace = true }
