--- a/pallets/ajuna-affiliates/Cargo.toml
+++ b/pallets/ajuna-affiliates/Cargo.toml
@@ -22,6 +22,9 @@ scale-info         = { workspace = true, features = [ "derive" ] }
 sp-runtime         = { workspace = true }
 sp-std             = { workspace = true }
 
+# Benchmarking
+frame-benchmarking = { workspace = true, optional = true }
+
 [dev-dependencies]
 pallet-balances = { workspace = true }
 sp-io           = { workspace = true }
@@ -31,6 +34,7 @@ default = [ "std" ]
 std = [
     "parity-scale-codec/std",
     "scale-info/std",
+    "frame-benchmarking/std",
     "frame-support/std",
     "frame-system/std",
     "ajuna-primitives/std",
@@ -40,6 +44,7 @@ std = [
     "sp-std/std",
 ]
 runtime-benchmarks = [
+    "frame-benchmarking/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
     "ajuna-primitives/runtime-benchmarks",
